--- a/aboutus.html
+++ b/aboutus.html
@@ -373,19 +373,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-        $(document).ready(function() {
-            $('#loginModalToggle').click(function() {
-                $('#loginModal').modal('toggle');
-            });
-
-            $('#reserveModalToggle').click(function() {
-                $('#reserveModal').modal('toggle');
-            });
-        });
-    </script>
-
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
